welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: '(' expected but identifier found.
  if noDoubles == true && die1 == die2) {
     ^withoutDoubles:7: error: illegal start of simple expression
} 
^